k8s/server-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 3
  selector:
  # selector - deployment is going to use this attribute to find the set of pods that its supposed to control
    matchLabels:
      component: server
  template:
  # configuration for pods
    metadata:
      labels:
        component: server
    spec:
      # exact behaviour of each pod that gets created
      containers:
        - name: server
          image: nanda1995/multi-server
          ports:
            - containerPort: 5000
