k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # create an ingress controller based on the nginx project
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # configure how the actual copy of nginx behaves
    # eg below command removes the '/api' from the request url string
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # enforce https connection always
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - countervalve.com
        - www.countervalve.com
      # secretName from certificate.yml file
      secretName: countervalve-com
  rules:
    - host: countervalve.com
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
    - host: www.countervalve.com
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
